修改新闻列表接口，Presenter 提取到基类，修改列表加载更多异常

--- a/RecyclerViewHelper/src/main/res/values/strings.xml
+++ b/RecyclerViewHelper/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="loading_desc">Loading...</string>
     <string name="no_more_data">- end -</string>
+    <string name="load_abnormal">- abnormal -</string>
 </resources>
